bootstrap grid system

--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -32,6 +32,7 @@
         <div class="row">
             <div class="col-12 col-md-6 col-lg-3">
                 <p>First column</p>
+                <div class="my-3 px-3">Let's add some spacing</div>
             </div>
             <!-- If you get overflow, it will get taller and wrap into the next row -->
             <div class="col-12 col-md-6 col-lg-9">
@@ -39,6 +40,6 @@
             </div>
         </div>
     </div>
-    
+
 </body>
 </html>
